test/errors/func6.qk

#OUTPUT
#Syntax Error: Invalid function arguments list.
# -> [12] func add_two(x:int, )
#
#END

#RET 1

extern func printf(s:str, ...)

func add_two(x:int, )
    x = x + y
end

func main -> int
    return 0
end

